Added so-far-resolved issue entries to 3.8.1 RN.

--- a/hazelcast/src/main/resources/release_notes.txt
+++ b/hazelcast/src/main/resources/release_notes.txt
@@ -62,9 +62,23 @@ The following are the other improvements performed to solve the enhancement issu
 
 This section lists the fixed issues for Hazelcast 3.8 and 3.8.x releases.
 
-*3.8 Fixes*
+*3.8.1 Fixes*
 
-The following are the issues solved for 3.8 release.
+- Updates performed with IMap's putTransient method should trigger EntryUpdatedListener. [10077]
+- Missing documentation for configuring log4j2 as logging framework. [9970]
+- Management Center section in the Reference Manual is misleading when it explains tool's behavior for clusters having more than two members. [9969]
+- Multicast configuration's trusted-interfaces element is not handled properly on startup of the members. [9953]
+- For Hazelcast 3.7.*, MigrationListener's migrationStarted and migrationCompleted methods are called for all partitions. [9919]
+- While performing async operations test, OOME is thrown due to exceeding garbage collection overhead, at the client side. [9665]
+- Behavior of aggregators when extracted value is null should be well-documented. [9858]
+- Hazelcast Java client disconnects from the cluster with heartbeat problems. [8956]
+- Currently the near cache updates does not guarantee the order of events for a certain key. The updates are performed via asynchronous executor runs and it does not guarantee the order of updates. Furthermore, the invalidations via event service is also not ordered. [8652]
+- Client's near cache implementation uses userExecutor which is also used for other purposes such as making callbacks to lifecycle listeners. A client may block an operation of the near cache updates by a slow lifecycle listener. This needs to be addressed. [8651]
+- Client has a configurable hazelcast.client.max.concurrent.invocations property which limits the outstanding client requests. It is observed that at some cases, for async calls, it is possible that this limit may not work as expected and this may cause outstanding requests to grow which may cause OOM. [8568]
+- When using a Hazelcast Client instance, if the redoOperation is set to true, operations which failed to be sent to the cluster are retried, but failures from executing the operation itself in the cluster are not. [8545]
+- While updating the Hazelcast maps in the clustered environment, the exception TargetNotMember is thrown. [7584]
+
+*3.8 Fixes*
 
 - Ordering consistency for the the method `writePortable` should be explained in the Reference Manual. [9813]
 - A client cannot add index to map using Portable values without registering Portable classes on member. [9808]
@@ -134,9 +148,7 @@ The following are the issues solved for 3.8 release.
 
 4. Known Issues
 
-Following is a known issue for 3.8-RC1:
-
-- Client fails to start when it has a near cache preloader configured and when wildcards are used for configuration: Near cache preloader configuration has a file where near cache keys are persisted. When you use wildcards in a configuration, e.g., `NearCache*`, then multiple near caches will attempt to use the same file.
+None.
 
 5. Removed/Deprecated Features
 
