--- a/hazelcast/src/main/resources/release_notes.txt
+++ b/hazelcast/src/main/resources/release_notes.txt
@@ -73,6 +73,7 @@ This section lists the fixed issues for Hazelcast 3.8 and 3.8.x releases.
 - Updates performed with IMap's putTransient method should trigger EntryUpdatedListener. [10077]
 - Missing documentation for configuring log4j2 as logging framework. [9970]
 - Management Center section in the Reference Manual is misleading when it explains tool's behavior for clusters having more than two members. [9969]
+- JCache bootstrap should have a way to reconciliate the existing `HazelcastInstance`. [9958]
 - Multicast configuration's trusted-interfaces element is not handled properly on startup of the members. [9953]
 - For Hazelcast 3.7.*, MigrationListener's migrationStarted and migrationCompleted methods are called for all partitions. [9919]
 - While performing async operations test, OOME is thrown due to exceeding garbage collection overhead, at the client side. [9665]
